--- a/css/styles-orange.css
+++ b/css/styles-orange.css
@@ -537,6 +537,7 @@ margin:auto;
   color: #ff8362;
   font-size: 6rem;
   margin: 50px;
+   text-shadow: 0 10px 15px rgb(0 0 0 / 30%);
    /*text-shadow: 1px 1px 2px rgba(123, 123, 123, 0.4);*/
    font-family:'karla', sans-serif;
 }
