--- a/css/styles-orange.css
+++ b/css/styles-orange.css
@@ -604,7 +604,7 @@ margin:auto;
    }
 }
 .container-fluid-home-kitchen {
-  background-image: url("http://www.staging.thesprayingcompany.com/wp-content/uploads/2021/04/homepage-kitchen.jpg");
+  background-image: url("https://www.thesprayingcompany.com/wp-content/uploads/2022/11/homepage-kitchen.jpg");
 
   background-size: cover;
   min-height: 920px;
